# Sbbsjs

./: .env.example  .replit  auth.py  export_project.py  keep_alive.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  question_bank_11.py  question_bank_12.py  question_generator.py  replit.nix  requirements.txt  server.py  supervisord.conf  test_gemini.py  test_lyrics.py
attached_assets/: Pasted-Here-is-the-full-updated-code-for-your-Spotify-like-web-UI-with-the-following-changes-Search-bar-1739620395525.txt  Pasted-Here-s-a-Spotify-like-Web-UI-codebase-that-you-can-give-to-Replit-AI-to-expand-on-This-includes-mus-1739615827087.txt  Pasted-Here-s-the-structure-of-your-Spotify-like-Web-UI-for-your-Discord-bot-1-Frontend-HTML-CSS-Java-1739617498484.txt  Pasted-The-error-Failed-to-access-the-lyrics-page-The-song-might-be-restricted-happens-when-Genius-rest-1739265221463.txt
cogs/: achievements.py  admin.py  admin_commands.py  admin_commands_new.py  admin_core_new.py  ai_chat.py  ai_chat_commands.py  ai_chat_enhanced.py  ai_chat_new.py  command_explainer.py  education.py  education_cog.py  education_commands_new.py  education_core_v2.py  education_enhanced.py  education_enhanced_final.py  education_manager.py  education_manager_new.py  education_new.py  education_plus.py  enhanced_admin_commands.py  flashcards.py  interactive_help.py  invite_manager.py  learning_assistant.py  music_commands.py  music_commands_enhanced.py  natural_conversation.py  personality.py  staff_commands.py  subject_chapters.py  subject_curriculum.py  subjects_viewer.py  (+2 more)
(+8 files in other folders)
